--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,30 +1,18 @@
 name: Build APK
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Install Buildozer dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
-        pip3 install --upgrade buildozer cython==0.29.33 virtualenv
+    - uses: actions/checkout@v4
     - name: Build with Buildozer
-      run: |
-        buildozer init
-        buildozer -v android debug
-    - name: Upload APK
-      uses: actions/upload-artifact@v2
+      uses: ArtemSBulgakov/buildozer-action@v1
       with:
-        name: app-debug
+        workdir: '.'
+        buildozer_version: 'stable'
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: package
         path: bin/*.apk
